@@ -75,7 +75,7 @@ GenerateSyreen (BYTE control)
 			GenerateRandomIP (GENERATE_MOONS);
 			if (pSolarSysState->pBaseDesc == &pSolarSysState->PlanetDesc[0])
 			{
-				pSolarSysState->MoonDesc[0].data_index = (BYTE)~0;
+				pSolarSysState->MoonDesc[0].data_index = HIERARCHY_STARBASE;
 				pSolarSysState->MoonDesc[0].radius = MIN_MOON_RADIUS;
 				pSolarSysState->MoonDesc[0].location.x =
 						COSINE (QUADRANT, pSolarSysState->MoonDesc[0].radius);
