@@ -180,7 +180,13 @@ enum
 	YEL_GAS_GIANT,
 	LAST_GAS_GIANT = YEL_GAS_GIANT,
 
-	NUMBER_OF_PLANET_TYPES
+	NUMBER_OF_PLANET_TYPES,
+
+	WORLD_TYPE_SPECIAL = 0x80,
+	PLANET_SHIELDED    = WORLD_TYPE_SPECIAL,
+
+	HIERARCHY_STARBASE = 127 | WORLD_TYPE_SPECIAL,
+	SA_MATRA           = 126 | WORLD_TYPE_SPECIAL,
 };
 
 #define NUMBER_OF_SMALL_ROCKY_WORLDS (LAST_SMALL_ROCKY_WORLD - FIRST_SMALL_ROCKY_WORLD + 1)
